tests/baselines/reference/-57087-14.errors.txt
-57087-14.ts(20,5): error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'A & B & C'.
  Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'A'.
    Type '"1"' is not assignable to type '"10"'.
-57087-14.ts(21,5): error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'A & C & B'.
  Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'A'.
-57087-14.ts(22,5): error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'B & A & C'.
  Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'B'.
    Types of parameters 'x' and 'x' are incompatible.
      Type '3' is not assignable to type '1'.
-57087-14.ts(23,5): error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'B & C & A'.
  Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'B'.
-57087-14.ts(24,5): error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'C & A & B'.
  Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'C'.
    Types of parameters 'x' and 'x' are incompatible.
      Type '2' is not assignable to type '1'.
-57087-14.ts(25,5): error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'C & B & A'.
  Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'C'.
-57087-14.ts(29,5): error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'W'.
  Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'A & B & C'.


==== -57087-14.ts (7 errors) ====
    declare const foo: { (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }
    
    interface C {
        (x:1):"1";
        (x:2):"20";
        (x:number):number | "1" | "20";
    };
    interface B {
        (x:2):"2"
        (x:3):"30"
        (x:number):number | "2" | "30";
    };
    interface A {
        (x:3):"3"
        (x:1):"10"
        (x:number):number | "3" | "10";
    };
    
    
    foo satisfies A & B & C;
        ~~~~~~~~~
!!! error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'A & B & C'.
!!! error TS1360:   Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'A'.
!!! error TS1360:     Type '"1"' is not assignable to type '"10"'.
    foo satisfies A & C & B;
        ~~~~~~~~~
!!! error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'A & C & B'.
!!! error TS1360:   Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'A'.
    foo satisfies B & A & C;
        ~~~~~~~~~
!!! error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'B & A & C'.
!!! error TS1360:   Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'B'.
!!! error TS1360:     Types of parameters 'x' and 'x' are incompatible.
!!! error TS1360:       Type '3' is not assignable to type '1'.
    foo satisfies B & C & A;
        ~~~~~~~~~
!!! error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'B & C & A'.
!!! error TS1360:   Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'B'.
    foo satisfies C & A & B;
        ~~~~~~~~~
!!! error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'C & A & B'.
!!! error TS1360:   Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'C'.
!!! error TS1360:     Types of parameters 'x' and 'x' are incompatible.
!!! error TS1360:       Type '2' is not assignable to type '1'.
    foo satisfies C & B & A;
        ~~~~~~~~~
!!! error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'C & B & A'.
!!! error TS1360:   Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'C'.
    
    type W = (A & B & C)|(A & C & B)|(B & A & C)|(B & C & A)|(C & A & B)|(C & B & A);
    
    foo satisfies W;
        ~~~~~~~~~
!!! error TS1360: Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' does not satisfy the expected type 'W'.
!!! error TS1360:   Type '{ (x: 1): "1"; (x: 2): "2"; (x: 3): "3"; (x: number): number | "1" | "2" | "3"; }' is not assignable to type 'A & B & C'.